<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_37">

    <TextView
        android:id="@+id/vlayoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_21"
        android:text="@string/str_news"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vlayoutTitleSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:text="@string/str_news_sub"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="@id/vlayoutTitle"
        app:layout_constraintTop_toBottomOf="@id/vlayoutTitle" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_2"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:text="@string/str_more"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/vlayoutTitleSub" />

</androidx.constraintlayout.widget.ConstraintLayout>