<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_25">


    <TextView
        android:id="@+id/arTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_ar"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arTitleSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:text="@string/str_ar_sub"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="@id/arTitle"
        app:layout_constraintTop_toBottomOf="@id/arTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:text="@string/str_more"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/arTitleSub" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvArRecommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arTitleSub" />

</androidx.constraintlayout.widget.ConstraintLayout>