<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dp_37">

    <TextView
        android:id="@+id/tvHomeNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/str_news"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHomeNewsSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:text="@string/str_news_sub"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="@id/tvHomeNews"
        app:layout_constraintTop_toBottomOf="@id/tvHomeNews" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:text="@string/str_more"
        android:layout_marginRight="@dimen/dp_8"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHomeNewsSub" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHomeNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHomeNewsSub" />

</androidx.constraintlayout.widget.ConstraintLayout>