<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dp_31">

    <TextView
        android:id="@+id/tvHotRecommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_21"
        android:text="@string/str_hot_record"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHotRecommendSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:text="@string/str_hot_records"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="@id/tvHotRecommend"
        app:layout_constraintTop_toBottomOf="@id/tvHotRecommend" />

    <TextView
        android:id="@+id/tvHotRecommendMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_8"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:text="@string/str_more"
        android:textColor="@color/fontGrey2"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHotRecommendSub" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHotRecommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHotRecommendSub" />


    <com.zhpan.bannerview.BannerViewPager
        android:id="@+id/banner_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_206"
        android:layout_margin="10dp"
        app:bvp_indicator_slide_mode="worm"
        app:bvp_page_style="multi_page"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHotRecommendSub" />

</androidx.constraintlayout.widget.ConstraintLayout>