<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_8"
    android:paddingBottom="@dimen/dp_4"
    >

    <ImageView
        android:id="@+id/adaIvPushMessage"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_176"
        android:scaleType="fitXY"
        android:layout_marginHorizontal="@dimen/dp_22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adaPushMessageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/fontMajor"
        app:layout_constraintRight_toRightOf="@id/adaIvPushMessage"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/adaIvPushMessage"
        app:layout_constraintTop_toBottomOf="@id/adaIvPushMessage"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/adaPushMessageContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/fontMajor"
        app:layout_constraintRight_toRightOf="@id/adaIvPushMessage"
        app:layout_constraintLeft_toLeftOf="@id/adaPushMessageTitle"
        app:layout_constraintTop_toBottomOf="@id/adaPushMessageTitle" />

    <TextView
        android:id="@+id/adaPushMessageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/color999"
        android:textSize="@dimen/sp_12"
        tools:text="@string/complaint_type"
        app:layout_constraintLeft_toLeftOf="@id/adaPushMessageContent"
        app:layout_constraintTop_toBottomOf="@id/adaPushMessageContent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/colorTabSelect"
        android:text="@string/look_detail"
        android:textColor="@color/colorTabSelect"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toRightOf="@id/adaIvPushMessage"
        app:layout_constraintTop_toTopOf="@id/adaPushMessageDate" />

</androidx.constraintlayout.widget.ConstraintLayout>