<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gavindon.mvvm_lib.status.StatusView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReportRecord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </com.gavindon.mvvm_lib.status.StatusView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reportQueryContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/contact"
        android:padding="16dp"
        android:textColorHint="@color/black"
        android:theme="@style/complaintLabel"
        android:visibility="gone"
        app:counterEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reportEtContact"
            style="@style/complaint_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"

        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reportQueryPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:hint="@string/contactPhone"
        android:padding="16dp"

        android:textColorHint="@color/black"
        android:theme="@style/complaintLabel"
        android:visibility="gone"
        app:counterEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reportQueryEtPhone"
            style="@style/complaint_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"

        android:visibility="gone" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:visibility="gone" />

    <com.gavindon.mvvm_lib.widgets.DonButton
        android:id="@+id/btnReportAdd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_38"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/add"
        app:circleRadius="@dimen/dp_22"
        app:normalBackgroundColor="@color/colorPrimaryYellow"
        app:normalTextColor="@color/white" />
</LinearLayout>