<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegisterBg"
    android:orientation="vertical"
    tools:context="com.stxx.wyhvisitorandroid.view.login.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/ivLeftArrow"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_arrow_back_long"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:text="@string/reset_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_28"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSendSmsTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/reset_pwd_tip"
                android:textColor="#404B69"
                android:textSize="@dimen/sp_14"
                app:layout_constraintLeft_toLeftOf="@id/tvReset"
                app:layout_constraintTop_toBottomOf="@id/tvReset" />

            <EditText
                android:id="@+id/etResetPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_52"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_52"
                android:background="@drawable/shape_visitor_server_grid"
                android:hint="@string/str_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingHorizontal="@dimen/dp_15"
                app:layout_constraintLeft_toLeftOf="@id/tvReset"
                app:layout_constraintTop_toBottomOf="@id/tvSendSmsTip" />

            <com.stxx.wyhvisitorandroid.widgets.SendSmsView
                android:id="@+id/resetSendSmsView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_52"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                android:clipToPadding="true"
                android:gravity="center_vertical"
                app:background="@drawable/shape_visitor_server_grid"
                app:editPadding="@dimen/dp_15"
                app:etPhoneId="@id/etResetPhone"
                app:layout_constraintLeft_toLeftOf="@id/tvReset"
                app:layout_constraintTop_toBottomOf="@id/etResetPhone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutResetPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:hintEnabled="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resetSendSmsView"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etResetPwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_52"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/shape_visitor_server_grid"
                    android:hint="@string/str_input_pwd"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingHorizontal="@dimen/dp_15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutResetPwdAgain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:hintEnabled="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutResetPwd"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etResetPwdAgain"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_52"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:background="@drawable/shape_visitor_server_grid"
                    android:hint="@string/str_input_pwd_again"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingHorizontal="@dimen/dp_15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.gavindon.mvvm_lib.widgets.DonButton
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginHorizontal="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_23"
                android:text="更改密码"
                android:textSize="@dimen/sp_18"
                app:circleRadius="@dimen/dp_3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutResetPwdAgain"
                app:normalBackgroundColor="#FDD655"
                app:normalTextColor="@color/white"
                app:pressBackgroundColor="#FFDACB45" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</LinearLayout>
