<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dp_7">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_10"
        android:backgroundTint="@color/white"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_arrow_back_long"
        app:layout_constraintBottom_toBottomOf="@id/llSearchDestination"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llSearchDestination" />

    <LinearLayout
        android:id="@+id/llSearchDestination"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_32"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:background="@drawable/shape_search"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toRightOf="@id/btnBack"
        app:layout_constraintRight_toLeftOf="@id/tvSearch"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_6"
            android:src="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearchScenic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/str_search_destination"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/color999"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivSearchClose"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:padding="@dimen/dp_8"
        android:src="@mipmap/close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/llSearchDestination"
        app:layout_constraintRight_toRightOf="@id/llSearchDestination"
        app:layout_constraintTop_toTopOf="@id/llSearchDestination" />

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/str_search"
        app:layout_constraintBottom_toBottomOf="@id/llSearchDestination"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/llSearchDestination" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_2"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSearchDestination" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cslHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvSearchResult">

        <TextView
            android:id="@+id/search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_search_history"
            app:layout_constraintBottom_toBottomOf="@id/search_delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_delete" />

        <ImageView
            android:id="@+id/search_delete"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_36"
            android:layout_marginEnd="@dimen/dp_12"
            android:padding="@dimen/dp_6"
            android:src="@mipmap/delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/search_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>